k8s_jenkins/ingress-nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: ingress-controllers
  name: ingress-controllers
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ingress-nginx
  namespace: ingress-controllers
spec:
  replicas: 1
  template:
   metadata:
    labels:
     app: ingress-nginx
    namespace: ingress-controllers
   spec:
     containers:
     - image: gcr.io/google_containers/nginx-ingress-controller:0.8.3
       name: ingress-nginx
       imagePullPolicy: Always
       ports:
       - name: http
         containerPort: 80
         protocol: TCP
       - name: https
         containerPort: 443
         protocol: TCP
       args:
        - /nginx-ingress-controller
        - --default-backend-service=$(POD_NAMESPACE)/nginx-default-backend
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-controllers
spec:
  type: LoadBalancer
  selector:
    app: ingress-nginx
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
