k8s_jenkins/jenkins-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
  labels:
    app: jenkins
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app: jenkins
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: jenkins
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app: jenkins
spec:
  selector:
    matchLabels:
      app: jenkins
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
        - name: jenkins-leader
          image: jenkins/jenkins:lts
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits: 
              memory: "1024Mi"
              cpu: "500m"   
          ports:
            - name: http-port
              containerPort: 8080
            - name: jnlp-port
              containerPort: 50000
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
            - name: docker-sock-volume
              mountPath: /var/run/docker.sock             
      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-volume
        - name: docker-sock-volume
          hostPath:
            path: /var/run/docker.sock
